[tool.poetry]
name = "not-another-chatbot"
version = "0.1.0"
description = ""
authors = ["sidharth29 <sidharthchandrasekar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.23"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
